[DROOLS-6746] make drools-core to depend on the static wiring instead… (#4066)
* [DROOLS-6746] make drools-core to depend on the static wiring instead of the dynamic one

* wip

* wip

* wip

* wip

* wip